Bug 1845241 - Make `nsIFrame::HandleEvent` move caret when secondary mouse button down r=edgar,emilio,dom-core

The other browsers move focus and `Selection` whe right click even if the
clicked element is not editable and even if there is a non-collapsed selection.
Fortunately, we already have similar code for the middle button press.
Therefore, we can make it run when the pressed button is the secondary button.

This also fixes bug 416546 and does not resurrect bug 709476.

However, this patch adds 2 prefs for making users customizable.  Our traditional
behavior is, we never collapse non-collapses selection with a right click even
if clicked outside the selection.  This allows users to open context menu for
selected text much easier.  Therefore, even though the behavior is different
from the others, we should keep the traditional behavior, but some users may
want the other browsers' behavior instead.  For them, this should be switchable
by a pref.

Additionally, I'm still not sure collapsing selection with a right click in
non-editable content especially for users using the caret browsing mode.
Therefore, for making things safer, this adds a pref to disable the new behavior
in the non-editable content.

Differential Revision: https://phabricator.services.mozilla.com/D189991